--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
 <!DOCTYPE html>
+<html lang="en-US">
+<meta charset="utf-8">
+
+<title>porpoise</title>
+
+<meta name="viewport" content="width=device-width">
+<meta name="theme-color" content="turquoise">
+<meta name="description" content="aquatic github template web">
+
+<link rel="stylesheet" href="agua.css" media="(color)">
+<link rel="stylesheet" href="echo.css" media="all">
+<link rel="license" href="UNLICENSE.txt">
+<link rel="icon" href="blow.svg">
+<link rel="prev" href="https://porpoise.page">
+<link rel="help" href="https://s9a.org/porpoise">
+<link rel="home" href="https://s9a.page">
+<link rel="index" href="https://s9a.page/oracle">
+<link rel="next" href="https://s9a.page/atmosphere">
+
+<main>
+  <h1><a class="swell" href="https://s9a.page">porpoise</a></h1>
+  <p>
+    <a href="https://porpoise.page"><em>wet</em>page</a>
+    <a href="https://github.com/s9a/porpoise">g<b>it</b>hub</a>
+    <span class="smell" contenteditable>templ</span><del>ate</del>
+  </p>
+</main>
